[package]
name = "icfpc2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
generator = "0.7.0"
geo = "0.18.0"
lazy_static = "1.4"
ordered-float = "2.6"
rand = "0.8.0"
raylib = "3.5"
reqwest = { version = "0.11.4", features = ["blocking", "cookies", "multipart"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
typenum = "1.13.0"
