[package]
name = "icfpc2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
generator = "0.7.0"
geo = "0.18.0"
geomath = "0.2.3"
lazy_static = "1.4"
log = "0.4.14"
ordered-float = "2.6"
rand = "0.8.0"
raylib = "3.5"
rayon = "1.5.1"
reqwest = { version = "0.11.4", features = ["blocking", "cookies", "multipart"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simplelog = "0.10.0"
typenum = "1.13.0"
